# pico2-template

./: Cargo.toml  README.md  build.rs  cargo-generate.toml  memory_4mb.x
.cargo/: config.toml
src/: main.rs
