[package]
name = "{{project-name}}"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M 
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"

# Panic Handler
panic-probe = { version = "1.0.0"{% if defmt -%}, features = ["print-defmt"]{% endif %} }

{% if hal == "embassy" -%}
# Embassy
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m",
  "executor-thread",
  {% if defmt -%}
  "defmt",
  {% endif -%}
] }
embassy-time = { version = "0.5.0", features = [
  {% if defmt -%}
  "defmt",
  #"defmt-timestamp-uptime-tus", # for microsecond disp
  "defmt-timestamp-uptime-tms", # for milisecond disp
  {% endif -%}
]}

embassy-rp = { version = "0.9.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  {% if defmt -%}
  "defmt",
  {% endif -%}
] }
{% else -%}
embedded-hal = "1.0.0"
rp235x-hal = { version = "0.3.0", features = [
  "binary-info",
  "critical-section-impl",
  "rt",
  {% if defmt -%}
  "defmt",
  {% endif -%}
] }
rp-binary-info = "0.1.1"
{% endif -%}
{% if defmt -%}
# Defmt Logging
defmt = "1.0.1"
defmt-rtt = "1.1.0"
{% endif -%}

